Develop (#66)
* [maven-release-plugin] prepare release ppm-commons-2.1.3

* [maven-release-plugin] prepare for next development iteration

* Adding optional depenencies in pom

* fix: bump jacoco version

* fix: Removing Travis CI and Bettercodehub no longer available

* fix: bump dep versions

* fix: pom

* [maven-release-plugin] prepare release 2.1.4

* [maven-release-plugin] prepare for next development iteration

* chore: update deps versions

* #53 - feat: migrating to java 11

* feat: remove gson lib - it closes #53

* fix: github build action

* Update src/main/java/br/com/ppm/commons/formatter/TextStackTraceFormatter.java

Co-authored-by: sonatype-lift[bot] <37194012+sonatype-lift[bot]@users.noreply.github.com>

* fix: imports

* fix: remove deprecated reflection api - it closes #24

* [maven-release-plugin] prepare release ppm-commons-2.2.0

* [maven-release-plugin] prepare for next development iteration

* doc: updating readme

* docs: Update docs

* feat: #35 add junit 5 deps

* fix: Resolve IncompatibleClassChangeError

* feat: Add isEmpty for object arrays

* feat: Week day

* feat: Arrays reverse for Objects

* feat: add Arrays operations

* fix: javadoc generation

* fix: update dependencies to release

* [maven-release-plugin] prepare release ppm-commons-2.2.1

* [maven-release-plugin] prepare for next development iteration

* [maven-release-plugin] prepare release ppm-commons-2.2.2

* [maven-release-plugin] prepare for next development iteration

* fix: remove coverage profile, migrating project to qodana

---------

Co-authored-by: sonatype-lift[bot] <37194012+sonatype-lift[bot]@users.noreply.github.com>